[metadata]
name = decision-boundaries
version = 0.0.1
author = Payal Varshney
author_email = pvarshne@rhrk.uni-kl.de
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls = 
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = decision_boundaries
packages = find:
python_requires = >=3.8
install_requires=
    torch==1.11.0
    torchvision==0.12.0
    umap-learn==0.5.2
    foolbox==3.3.2
    matplotlib==3.5.1
[options.packages.find]
where = decision_boundaries
